--- a/src/component/react-redux/index.html
+++ b/src/component/react-redux/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- build:inlinecss -->
-    <link rel="stylesheet" data-href="/pages/react/index.css" href="$$_static_url_$$/pages/react/index.css">
+    <link rel="stylesheet" data-href="/pages/react-redux/index.css" href="$$_static_url_$$/pages/react-redux/index.css">
 
     <!-- endbuild -->
 
-    <title>React</title>
+    <title>React-Redux</title>
 </head>
 <body>
-    <div id="J_container"></div>
+    <div id="root"></div>
 
-    <script type="text/javascript" src="$$_static_url_$$/pages/react/index.js"></script>
+    <script type="text/javascript" src="$$_static_url_$$/pages/react-redux/index.js"></script>
 </body>
 </html>
